Feeds: Fixed delayed postProcessing on small screens

--- a/src/plugins/tabs/_screen-sm-max.scss
+++ b/src/plugins/tabs/_screen-sm-max.scss
@@ -51,6 +51,8 @@
 	border-radius: 4px;
 	border-top: 1px solid #adadad;
 	margin-bottom: 15px;
+	padding-left: 0;
+	padding-right: 0;
 
 	> {
 		.tabpanels {
